# llm-agent

./: .dockerignore  .env.example  .gitignore  Caddyfile  Dockerfile  PRIVACY.md  README.md  docker-compose.yml  manager.spec  monkey-server-aarch64-apple-darwin.spec  package-lock.json  package.json  start.sh  tsconfig.build.json
.github/: CI.md  SECRETS.md
desktop/: .env.example  .env.production  .gitignore  index.html  package-lock.json  package.json  vite.config.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/scripts/: fetch-llama-server.sh  hash-catalog.sh
desktop/src-tauri/src/: db.rs  llama_runtime.rs  main.rs  noise_p2p.rs  ollama_runtime.rs  openai_connector.rs
docs/: AI_LITERACY.md  EU_AI_ACT_AUDIT.md
e2e/: browser-auth.spec.ts  playwright.spec.ts
frontend/: index.html  package-lock.json  package.json  vite.config.ts
monkey/: _browser_loop.py  agent.py  animals.py  approvals.py  browser.py  build.py  checkpoint.py  context_mgr.py  custom_endpoints.py  game_guard.py  imap_client.py  kb_store.py  llm.py  loop_detector.py  mail_store.py  main.py  memory.py  personas.py  planner.py  quality_gate.py  repo_skills.py  requirements.txt  scheduler.py  seed_repo_skills.py  seed_skills.py  site_memory.py  skills.py  skills_store.py  smtp_client.py  store.py  tasks_store.py
prisma/: schema.prisma
provider-runtime/: Cargo.toml
provider-runtime/src/: archetype.rs  attest.rs  attestation.rs  benchmark.rs  canary.rs  guard.rs  main.rs  matchmaker.rs  noise_responder.rs  ollama.rs  sidecar.rs  state.rs  tasks.rs  weight_hash.rs
scripts/: build-sidecar-protected.sh  db-bootstrap.sh  e2e_conv_llama.py  hash-catalog.sh  sign-provider-runtime.sh  test-gate.sh  test_agent_battery.py  test_ministral_tool_call.py
src/: app.module.ts  main.ts
test-results/: .last-run.json
tests/: e2e_lazada_hoodie.py  social-schemas.spec.ts  social.service.spec.ts  test_agent_battery_contract.py  test_agent_loop.py  test_app_fullstack_scaffold.py  (+40 more)
(+527 files in other folders)
