[package]
name = "monkey"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "macos-private-api"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled", "load_extension"] }
dirs = "5"
sqlite-vec = "0.1"
tauri-plugin-http = "2.5.8"
snow = "0.9"
base64 = "0.22"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "json"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "net", "sync"] }
getrandom = "0.2"
sha2 = "0.10"
futures-util = "0.3"
libc = "0.2"
axum = "0.7"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
debug = false
incremental = false
overflow-checks = false
